# ckan-utch

ckan/: Dockerfile.dev  install_mssql_tools.sh  requirements.txt
src/ckanext-utch/: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
src/ckanext-utch/.github/workflows/: test.yml
src/ckanext-utch/ckanext/utch/: cli.py  helpers.py  plugin.py  views.py
src/ckanext-utch/ckanext/utch/assets/: script.js  webassets.yml
src/ckanext-utch/ckanext/utch/logic/: action.py  auth.py  db.py  schema.py  validators.py
src/ckanext-utch/ckanext/utch/models/: estudiante_model.py
src/ckanext-utch/ckanext/utch/tests/: test_helpers.py  test_plugin.py  test_views.py
src/ckanext-utch/ckanext/utch/tests/logic/: test_action.py  test_auth.py  test_validators.py
